--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Admin==1.4.2
 Flask-Assets==0.12
 Flask-Bcrypt==0.7.1
 Flask-Cache==0.13.1
+Flask-Celery-Helper==1.1.0
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
@@ -17,11 +18,14 @@ Pygments==2.1.3
 SQLAlchemy==1.1.4
 WTForms==2.1
 Werkzeug==0.11.11
+amqp==2.1.4
 aniso8601==1.2.0
 argparse==1.2.1
 backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.2
+billiard==3.5.0.2
 blinker==1.4
+celery==4.0.0
 cffi==1.9.1
 click==6.6
 decorator==4.0.10
@@ -29,6 +33,7 @@ enum34==1.1.6
 ipython==5.1.0
 ipython-genutils==0.1.0
 itsdangerous==0.24
+kombu==4.0.2
 pathlib2==2.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
@@ -37,9 +42,11 @@ ptyprocess==0.5.1
 pycparser==2.17
 python-dateutil==2.6.0
 pytz==2016.10
+redis==2.10.5
 simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.3.1
+vine==1.1.3
 wcwidth==0.1.7
 webassets==0.12.0
 wsgiref==0.1.2
